# cellxhaustive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mamba_env.yaml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cellxhaustive/: __init__.py  assign_cell_types.py  backup_cell_identification.py  backup_dbscan.py  backup_main_gating.py  cell_identification_backup.py  cell_ontology_names.py  cell_subdivision.py  cell_subdivision_counts.py  cellxhaustive.py  check_all_combinations.py  check_all_subsets.py  cli_parser.py  dbscan_backup.py  determine_marker_status.py  find_name_difference.py  find_set_differences.py  identify_phenotypes.py  knn_classifier.py  main_gating.py  marker_combination_scoring.py  marker_combinations_scoring.py  score_marker_combinations.py  select.py  select_cells.py  unused_cell_ontology_names.py  unused_cell_subdivision.py  unused_cell_subdivision_counts.py  unused_find_set_differences.py  unused_select_cells.py  utility.py  utils.py
src/cellxhaustive/config/: major_cell_types.yaml
src/cellxhaustive/test/data/: markers.txt
src/cellxhaustive/test/test_data/: cell_types_test.json  citeseq_dataset_generator.py
src/cellxhaustive/test/test_data/batch_sample_std_test/: cell_expression_batch_sample_std0.01.tsv  cell_expression_batch_sample_std0.5.tsv  cell_expression_batch_sample_std1.5.tsv
src/cellxhaustive/test/test_data/batch_sample_std_test_mixed/: cell_expression_mixed_batch_sample_std0.25.tsv  cell_expression_mixed_batch_sample_std0.5.tsv  cell_expression_mixed_batch_sample_std1.25.tsv  cell_expression_mixed_batch_sample_std1.5.tsv
src/cellxhaustive/test/test_data/batch_sample_test/: cell_expression_std0.75_4batches_4samples.tsv  cell_expression_std0.75_5batches_5samples.tsv  cell_expression_std0.75_6batches_6samples.tsv
src/cellxhaustive/test/test_data/batch_sample_test_mixed/: cell_expression_mixed_std0.75_3batches_3samples.tsv  cell_expression_mixed_std0.75_5batches_5samples.tsv  cell_expression_mixed_std0.75_6batches_6samples.tsv
src/cellxhaustive/test/test_data/batch_std_test/: cell_expression_batch_std0.01.tsv  cell_expression_batch_std0.25.tsv  cell_expression_batch_std0.5.tsv  cell_expression_batch_std1.0.tsv  cell_expression_batch_std1.5.tsv
src/cellxhaustive/test/test_data/batch_std_test_mixed/: cell_expression_mixed_batch_std1.0.tsv  cell_expression_mixed_batch_std1.25.tsv
src/cellxhaustive/test/test_data/batch_test/: cell_expression_std0.75_2batches.tsv  cell_expression_std0.75_3batches.tsv  cell_expression_std0.75_5batches.tsv  cell_expression_std0.75_6batches.tsv
src/cellxhaustive/test/test_data/batch_test_mixed/: cell_expression_mixed_std0.75_3batches.tsv  cell_expression_mixed_std0.75_6batches.tsv
src/cellxhaustive/test/test_data/default_batch_sample_std_test/: default_cell_expression_batch_sample_std0.01.tsv  default_cell_expression_batch_sample_std0.25.tsv  default_cell_expression_batch_sample_std0.5.tsv  default_cell_expression_batch_sample_std1.0.tsv  default_cell_expression_batch_sample_std1.25.tsv  default_cell_expression_batch_sample_std1.5.tsv
src/cellxhaustive/test/test_data/default_batch_sample_test/: default_cell_expression_2batches_2samples_std0.75.tsv  default_cell_expression_3batches_3samples_std0.75.tsv  default_cell_expression_4batches_4samples_std0.75.tsv  default_cell_expression_5batches_5samples_std0.75.tsv  default_cell_expression_6batches_6samples_std0.75.tsv
src/cellxhaustive/test/test_data/default_batch_std_test/: default_cell_expression_batch_std0.01.tsv  default_cell_expression_batch_std0.25.tsv  default_cell_expression_batch_std0.5.tsv  default_cell_expression_batch_std0.75.tsv  default_cell_expression_batch_std1.0.tsv  default_cell_expression_batch_std1.25.tsv  default_cell_expression_batch_std1.5.tsv
src/cellxhaustive/test/test_data/default_batch_test/: default_cell_expression_2batches_std0.75.tsv  default_cell_expression_3batches_std0.75.tsv  default_cell_expression_5batches_std0.75.tsv  default_cell_expression_6batches_std0.75.tsv
src/cellxhaustive/test/test_data/default_fake_std_test/: default_cell_expression_fake_std0.01.tsv  default_cell_expression_fake_std0.25.tsv  default_cell_expression_fake_std0.5.tsv  default_cell_expression_fake_std1.0.tsv  default_cell_expression_fake_std1.25.tsv  default_cell_expression_fake_std1.5.tsv
src/cellxhaustive/test/test_figures/: test_plots.py
src/cellxhaustive/test_dataset/: cell_types.json  citeseq_dataset_generator.py  test_dataset.py
src/data/config/: B.yaml  CD4T.yaml  CD8T.yaml  DCs.yaml  Monocytes.yaml  NK.yaml  config.yaml  major_cell_types.json
tests/: test_cellxhaustive.py
(+210 files in other folders)
