[tool.poetry]
name = "cellxhaustive"
version = "1.0"
description = "A python package for performing an exhaustive search of cell phenotypes"
authors = ["Bernat Bramon Mora <bernat.bramon@gmail.com>", "Antonin Thiébaut <antonin.thiebaut57@gmail.com>"]
license = "MIT"
repository = "https://github.com/bernibra/cellxhaustive"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"

[tool.poetry.dev-dependencies]
[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
