[tool.poetry]
name = "cellxhaustive"
version = "1.1.4"
description = "A Python package for performing an exhaustive search of cell phenotypes"
keywords = ["cell annotations", "cite-seq", "single cell"]
authors = ["Antonin Thiébaut <antonin.thiebaut57@gmail.com>", "Bernat Bramon Mora <bernat.bramon@gmail.com>"]
maintainers = ["Antonin Thiébaut <antonin.thiebaut57@gmail.com>", "Bernat Bramon Mora <bernat.bramon@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md", "CONDUCT.md", "CONTRIBUTING.md"]  # Supplementary files to include in dist
packages = [{include = "cellxhaustive", from = "src"}]  # Package location in file structure
homepage = "https://github.com/bdsc-tds/cellxhaustive/"
repository = "https://github.com/bdsc-tds/cellxhaustive/"
# documentation = ""  # Package documentation
classifiers = ["Topic :: Scientific/Engineering :: Bio-Informatics"]  # Specific classifiers

[tool.poetry.urls]
"Changelog" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CHANGELOG.md"
"Code of Conduct" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CONDUCT.md"
"Contributing" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CONTRIBUTING.md"

[tool.poetry.scripts]
cellxhaustive = "cellxhaustive.cellxhaustive:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
pandas = "^2.2.2"
pathos = "^0.3.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core >= 1.8.0"]
build-backend = "poetry.core.masonry.api"

# [tool.semantic_release]
# version_toml = ["pyproject.toml:tool.poetry.version"]  # Location of version number
# branch = "main"  # Branch to release
# build_command = "pip install poetry && poetry build"  # Command to build dists
# changelog_file = "CHANGELOG.md"  # Path to changelog

# [tool.semantic_release.publish]
# dist_glob_patterns = "dist/*"  # Path to dists
# upload_to_vcs_release = true  # Upload to remote VCS (here, GitHub)
