[tool.poetry]
name = "cellxhaustive"
version = "1.0.0"
description = "A Python package for performing an exhaustive search of cell phenotypes"
keywords = ["cell annotations", "cite-seq", "single cell"]
authors = ["Antonin Thiébaut <antonin.thiebaut57@gmail.com>", "Bernat Bramon Mora <bernat.bramon@gmail.com>"]
maintainers = ["Antonin Thiébaut <antonin.thiebaut57@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md", "CONDUCT.md", "CONTRIBUTING.md"]
packages = [{include = "cellxhaustive", from = "src"}]
homepage = "https://github.com/bdsc-tds/cellxhaustive/"
repository = "https://github.com/bdsc-tds/cellxhaustive/"
classifiers = ["Topic :: Scientific/Engineering :: Bio-Informatics",
			   "Operating System :: MacOS",
			   "Operating System :: Microsoft",
			   "Operating System :: Unix"]

[tool.poetry.urls]
"Changelog" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CHANGELOG.md"
"Code of Conduct" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CONDUCT.md"
"Contributing" = "https://github.com/bdsc-tds/cellxhaustive/blob/main/CONTRIBUTING.md"

[tool.poetry.scripts]
cellxhaustive = "cellxhaustive.cellxhaustive:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
pandas = "^2.2.2"
pathos = "^0.3.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core >= 1.8.0"]
build-backend = "poetry.core.masonry.api"
